[metadata]
name=nyuseu-news
description="Nyuseu - 뉴스 - News Reader from RSS"
author=폭스마스크
author_email=foxmask+git@protonmail.com
url=https://gitlab.com/annyong/nyuseu-news/nyuseu-news
long_description=file: README.md
long_description_content_type=text/markdown
license=BSD License
keywords=news reader rss starlette
version=attr: nyuseu_server.__version__
download_url="https://gitlab.com/annyong/nyuseu-news/-/archive/nyuseu-news-" + version + "/nyuseu-news-" + version + ".zip"
classifiers=
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP


[options]
zip_safe=false

include_package_data=true

install_requires=
    aiosqlite==0.17.0
    arrow==1.1.1
    beautifulsoup4==4.9.3
    feedparser==6.0.8
    feedparser-data==0.1.1
    httpx==0.18.2
    opml==0.5
    orm==0.1.5
    pyaml==20.4.0
    rich==10.6.0
    starlette==0.16.0
    uvicorn==0.14.0



[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=120
exclude=.tox,build
