[metadata]
name=nyuseu-news
description="Nyuseu :: News Reader :: 뉴스"
author=폭스마스크
author_email=foxmask+git@pm.me
url=https://github.com/foxmask/nyuseu-news
long_description=file: README.md
long_description_content_type=text/markdown
license=WTFPL
keywords=news reader rss starlette
version=file: nyuseu_server/VERSION.txt

classifiers=
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Database


[options]
zip_safe=false

include_package_data=true

install_requires=
    aiosqlite==0.17.0
    arrow==1.2.1
    beautifulsoup4==4.10.0
    feedparser==6.0.8
    httpx>=0.20.0
    opml==0.5
    orm==0.3.0
    pytz==2021.3
    pyaml==21.10.1
    rich==10.13.0
    starlette==0.17.0
    uvicorn==0.15.0


[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=120
exclude=.tox,build
