[metadata]
name=nyuseu
description="nyuseu - 뉴스"
author=FoxMaSk
author_email=foxmask@protonmail.com
url=https://github.com/foxmask/nyuseu
long_description=file: README.md
long_description_content_type=text/markdown
license= BSD License
keywords=Feeds Reader
version= attr: nyuseu.__version__
download_url="https://github.com/foxmask/nyuseu/archive/nyuseu-" + version + ".zip",
classifiers=
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP


[options]
zip_safe=false

include_package_data=true

install_requires=
    jinja2
    nyuseu-api
    starlette
    uvicorn
    httpx

[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=120
exclude=.tox,build
